--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Adventures/TheDamnedRiver/TheDamnedRiver.pdf
 Adventures/TheDamnedRiver/The Damned River.pdf
+Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
