Ignore Demon Soul Barbarian

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Adventures/TheDamnedRiver/TheDamnedRiver.pdf
 Adventures/TheDamnedRiver/The Damned River.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
+Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
