--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Adventures/TheDamnedRiver/TheDamnedRiver.pdf
 Adventures/TheDamnedRiver/The Damned River.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
+Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul _ Reddit.pdf
