Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 
 Adventures/TheDamnedRiver/TheDamnedRiver.pdf
 Adventures/TheDamnedRiver/The Damned River.pdf
+Creatures/Ratfolk/Ratfolk Ninja Minions/Ratfolk Ninja Minions _ Reddit.pdf
+CreatureGuides/Ninja Ratfolk/Ninja Ratfolk Encounter Maps.zip
+CreatureGuides/Common Ratfolk/Ratfolk Creature Guide Maps.zip
+CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk.pdf
+CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk _ Reddit.pdf
+CreatureGuides/Ninja Ratfolk/Creature Guide_Ninja Ratfolk.pdf
