Update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ CreatureGuides/Common Ratfolk/Ratfolk Creature Guide Maps.zip
 CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk.pdf
 CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk _ Reddit.pdf
 CreatureGuides/Ninja Ratfolk/Creature Guide_Ninja Ratfolk.pdf
+Creatures/Ratfolk/Ratfolk Ninja Masters/Ratfolk Ninja Masters _ Reddit.pdf
