Post tomb lords

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk.pdf
 CreatureGuides/Common Ratfolk/Creature Guide_ Ratfolk _ Reddit.pdf
 CreatureGuides/Ninja Ratfolk/Creature Guide_Ninja Ratfolk.pdf
 Creatures/Ratfolk/Ratfolk Ninja Masters/Ratfolk Ninja Masters _ Reddit.pdf
+CreatureGuides/Tomb Kings/Encounter Maps/The titan Guide_small.png
+CreatureGuides/Tomb Kings/Encounter Maps/temple satue Grid.jpg
+CreatureGuides/Tomb Kings/Encounter Maps/temple satue gridlesss.jpg
+CreatureGuides/Tomb Kings/Encounter Maps/temple satue guide (1).png
+CreatureGuides/Tomb Kings/Encounter Maps/temple satue guide (small).png
+CreatureGuides/Tomb Kings/Encounter Maps/The titan (Grid).jpg
+CreatureGuides/Tomb Kings/Encounter Maps/The titan (Gridless).jpg
+CreatureGuides/Tomb Kings/Encounter Maps/The titan Guide.png
