--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ CreatureGuides/Tomb Kings/Encounter Maps/temple satue guide (small).png
 CreatureGuides/Tomb Kings/Encounter Maps/The titan (Grid).jpg
 CreatureGuides/Tomb Kings/Encounter Maps/The titan (Gridless).jpg
 CreatureGuides/Tomb Kings/Encounter Maps/The titan Guide.png
+CreatureGuides/Tomb Kings/Encounter Maps/The titan (Guide).png
+CreatureGuides/Tomb Kings/Encounter Maps/The titan (Guide)_small.png
