--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ CreatureGuides/Tomb Kings/Encounter Maps/The titan (Gridless).jpg
 CreatureGuides/Tomb Kings/Encounter Maps/The titan Guide.png
 CreatureGuides/Tomb Kings/Encounter Maps/The titan (Guide).png
 CreatureGuides/Tomb Kings/Encounter Maps/The titan (Guide)_small.png
+CreatureGuides/Tomb Kings/Encounter Maps
+CreatureGuides/Tomb Kings/ContentImages
+Creatures/Tomb Kings/Bone Giant - Reddit
+Creatures/Tomb Kings/Ushabti-images
+Creatures/Tomb Kings/PotentialContentImages/Necrolith Colossus.PNG
+CreatureGuides/Tomb Kings/Creature Guide_ Tomb Kingdoms.pdf
+Creatures/Tomb Kings/Bone Giant - Reddit.pdf
+Creatures/Tomb Kings/Ushabti.pdf
