Add ninja ratfolk documents

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Adventures/TheDamnedRiver/The Damned River.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul.pdf
 Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon Soul _ Reddit.pdf
+*.jpg
+*.pdf
+*.zip
+*.png
