--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Subclasses/Primal Path - Path of the Demon Soul/Primal Path - Path of the Demon 
 *.pdf
 *.zip
 *.png
+ContentList(Old).xlsx
+*.pdf
+Subclasses/Ranger Archetype - Sea Dog/Ranger Archetype - Sea Dog.pdf
+Subclasses/Ranger Archetype - Sea Dog/Ranger Archetype - Sea Dog.pdf
+Subclasses/Druid Circle - Circle of Grasslands/Druid Circle - Circle of the Grasslands.pdf
