--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ ContentList(Old).xlsx
 Subclasses/Ranger Archetype - Sea Dog/Ranger Archetype - Sea Dog.pdf
 Subclasses/Ranger Archetype - Sea Dog/Ranger Archetype - Sea Dog.pdf
 Subclasses/Druid Circle - Circle of Grasslands/Druid Circle - Circle of the Grasslands.pdf
+PublisherTemplate
+*.pdf
+Spells/Temp.txt
+Mat Magic Items.xlsx
+NewLootTestSource.txt
+TestText.txt
